@@ -19,6 +19,10 @@ Changes with APR-util 1.4.0
   *) Detection of PostgreSQL may fail if LIBS contains all libs returned by
      pg_config. Use it only as the last resort. [Bojan Smojver]
 
+  *) When searching for DSOs, look in apr-util-APU_MAJOR_VERSION subdirectory
+     of each component of APR_DSOPATH. PR 45327
+     [Joe Orton, William Rowe, Bojan Smojver]
+
 Changes with APR-util 1.3.0
 
   *) apr_reslist: destroy all resources in apr_cleanup.
